--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,8 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+      "Logging": {
+            "LogLevel": {
+                  "Default": "Information",
+                  "Microsoft.AspNetCore": "Warning"
+            }
+      },
+      "TokenKey": "HelloWorld_I_am_Here_Its_A_Secret"
 }
