--- a/API/API.csproj
+++ b/API/API.csproj
@@ -1,13 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+      <PropertyGroup>
+      <TargetFramework>net6.0</TargetFramework>
+      <!-- <Nullable>enable</Nullable> -->
+      <ImplicitUsings>enable</ImplicitUsings>
+      </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
-
+      <ItemGroup>
+            <PackageReference Include="EntityFramework" Version="6.4.4" />
+            <PackageReference Include="FluentValidation" Version="10.4.0" />
+            <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
+            <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.4" />
+            <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
+            <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
+              <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+              <PrivateAssets>all</PrivateAssets>
+            </PackageReference>
+            <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.4" />
+            <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
+            <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
+            <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+      </ItemGroup>
 </Project>
