--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+      "Logging": {
+            "LogLevel": {
+                  "Default": "Information",
+                  "Microsoft.AspNetCore": "Warning"
+            }
+      },
+      "AllowedHosts": "*",
+      "ConnectionStrings": {
+            "API": "Server=VINOTH\\SQLEXPRESS;Database=Wedding_system;Trusted_Connection=True;"
+      }
 }
