--- a/API/API.csproj
+++ b/API/API.csproj
@@ -11,6 +11,7 @@
             <PackageReference Include="FluentValidation" Version="10.4.0" />
             <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
             <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.4" />
+            <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.4" />
             <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
             <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
               <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
