--- a/angular/package.json
+++ b/angular/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "guid-typescript": "^1.0.9",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
