--- a/API/API.csproj
+++ b/API/API.csproj
@@ -20,6 +20,10 @@
             <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.4" />
             <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
             <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
+            <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.4">
+              <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+              <PrivateAssets>all</PrivateAssets>
+            </PackageReference>
             <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
             <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
       </ItemGroup>
