--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,6 +7,6 @@
       },
       "AllowedHosts": "*",
       "ConnectionStrings": {
-            "API": "Server=VINOTH\\SQLEXPRESS;Database=Wedding_system;Trusted_Connection=True;"
+            "API": "Server=DESKTOP-LS5R3C6\\SQLEXPRESS;Database=Wedding_system;Trusted_Connection=True;"
       }
 }
